# HuffmanCompressing

./: CMakeLists.txt  main.c
headers/: binary_tree.h  huffman_compressing.h  node.h  priority_queue.h
src/: binary_tree.c  huffman_compressing.c  node.c  priority_queue.c
